[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fichas/Imagenes/Azul.png" type="Texture" id=1]
[ext_resource path="res://Fichas/popupOpciones.gd" type="Script" id=2]
[ext_resource path="res://Fichas/Scripts/Fichas Individuales/Azul.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 42.9232

[node name="FichaAzul" type="Area2D"]
position = Vector2( 51, 52 )
scale = Vector2( 0.3, 0.3 )
collision_layer = 4
collision_mask = 27
monitoring = false
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Azul" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = -206.667
margin_top = -233.333
margin_right = -136.667
margin_bottom = -203.333

[node name="popupOpciones" type="Popup" parent="Control"]
visible = true
margin_left = 3.33331
margin_right = 70.3333
margin_bottom = 30.0
popup_exclusive = true
script = ExtResource( 2 )

[node name="opcionMov1" type="Button" parent="Control/popupOpciones"]
margin_left = 3.0
margin_top = 3.33333
margin_right = 23.0
margin_bottom = 26.3333

[node name="opcionMov2" type="Button" parent="Control/popupOpciones"]
margin_left = 23.0
margin_top = 3.33333
margin_right = 43.0
margin_bottom = 26.3333

[node name="opcionMov3" type="Button" parent="Control/popupOpciones"]
margin_left = 43.6666
margin_top = 3.33333
margin_right = 63.6666
margin_bottom = 26.3333

[connection signal="pressed" from="Control/popupOpciones/opcionMov1" to="Control/popupOpciones" method="_on_opcionMov1_pressed"]
[connection signal="pressed" from="Control/popupOpciones/opcionMov2" to="Control/popupOpciones" method="_on_opcionMov2_pressed"]
[connection signal="pressed" from="Control/popupOpciones/opcionMov3" to="Control/popupOpciones" method="_on_opcionMov3_pressed"]
